--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 												<section>
 													<h3 class="icon solid fa-comment">SEX</h3>
 													<p>
-														<a href="https://www.linke-din.com/in/gihan-tharushika/">Gihan Tharushika</a><br />
+														<a href="https://www.linke-din.com/in/gihan-tharushika/">Male</a><br />
 														<!-- <a href="#">linkedin.com/untitled</a><br />
 														<a href="#">facebook.com/untitled</a> -->
 													</p>
@@ -262,4 +262,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
