--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 												<section>
 													<h3 class="icon solid fa-comment">SEX</h3>
 													<p>
-														<a href="https://www.linke-din.com/in/gihan-tharushika/">Male</a><br />
+														<a>Male</a><br />
 														<!-- <a href="#">linkedin.com/untitled</a><br />
 														<a href="#">facebook.com/untitled</a> -->
 													</p>
@@ -264,3 +264,4 @@
 	</body>
 
 </html>
+
