--- a/index.html
+++ b/index.html
@@ -185,7 +185,15 @@
 														Malabe
 													</p>
 												</section>
-											
+											</div>
+											<div class="col-6 col-12-small">
+												<section>
+													<h3 class="icon solid fa-comment">SEX</h3>
+													<p>
+														<a>Male</a><br />
+													</p>
+												</section>
+											</div>
 											<div class="col-6 col-12-small">
 												<section>
 													<h3 class="icon solid fa-envelope">Email</h3>
@@ -254,5 +262,6 @@
 	</body>
 
 </html>
+
 
 
